--- a/.github/workflows/runs.yml
+++ b/.github/workflows/runs.yml
@@ -21,6 +21,6 @@ jobs:
         pip install numpy flake8 pytest
     - name: run all tests
       run: |
-        cd dependencies/2decomp_fft && make && cd -
+        make library
         cd tests/
         for i in */; do cd $i && sh testit.sh && cd -; done
