added docs folder and polished readme

--- a/build.conf
+++ b/build.conf
@@ -15,4 +15,4 @@ IMPDIFF=0          #
 IMPDIFF_1D=0       # = 1 requires IMPDIFF=1 too
 DECOMP_X=1         # best = 1 if IMPDIFF_1D=0, else 1
 DECOMP_Z=0         # best = 0 if IMPDIFF_1D=1, else 0
-SINGLE_PRECISION=0 # not a good idea to change
+SINGLE_PRECISION=0 # typically not a good idea to change
