--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -13,6 +13,6 @@ jobs:
       run: sudo apt-get update; sudo apt-get install gfortran libopenmpi-dev libfftw3-dev
     - name: test compilation
       run: |
-        cd src/
-        make && make run && make clean
-        make OMP+=-fopenmp OTH+=-D_IMPDIFF && make run && make clean
+        make library
+        make && make clean
+        make FFLAGS+=-fopenmp LIBS+=-lfftw3_threads && make clean
