--- a/.github/workflows/runs.yml
+++ b/.github/workflows/runs.yml
@@ -21,5 +21,6 @@ jobs:
         pip install numpy flake8 pytest
     - name: run all tests
       run: |
+        make library
         cd tests/
         for i in */; do cd $i && sh testit.sh && cd -; done
