--- a/examples/_manuscript_lid_driven_cavity/dns.in
+++ b/examples/_manuscript_lid_driven_cavity/dns.in
@@ -1,6 +1,6 @@
 128 128 128              ! itot, jtot, ktot
 1. 1. 1.                 ! lx, ly, lz
-0.                       ! gr
+0 0.                     ! gtype, gr
 .95 1.e5                 ! cfl, dtmin
 1000.                    ! visci
 zer                      ! inivel
