--- a/src/dns.in
+++ b/src/dns.in
@@ -1,6 +1,6 @@
 64 64 64                 ! itot, jtot, ktot
 3. 1.5 1.                ! lx, ly, lz
-1.                       ! gr
+0 1.                     ! gtype, gr
 .95 1.0e5                ! cfl, dtmin
 1000.                    ! visci
 poi                      ! inivel
