More logical setup of the grid clustering (#85)
* added more logical tweaking for the grid clustering

* changed `gtype` enumerator

* minor documentation fix

--- a/examples/turbulent_channel_convective_reference_frame/dns.in
+++ b/examples/turbulent_channel_convective_reference_frame/dns.in
@@ -1,6 +1,6 @@
 512 256 144              ! itot, jtot, ktot
 6. 3. 1.                 ! lx, ly, lz
-0.                       ! gr
+1 0.                     ! gtype, gr
 .95 1.e5                 ! cfl, dtmin
 5640.                    ! visci
 iop                      ! inivel
