--- a/tests/lid_driven_cavity/dns.in
+++ b/tests/lid_driven_cavity/dns.in
@@ -1,6 +1,6 @@
 2 64 64                ! itot, jtot, ktot
 0.03125 1. 1.          ! lx, ly, lz
-0.                     ! gr
+1 0.                   ! gtype,gr
 .95 1.e5               ! cfl
 1000.                  ! visci
 zer                    ! inivel
