adding Snellius specific build

--- a/build.conf
+++ b/build.conf
@@ -1,7 +1,7 @@
 #
 # compiler and compiling profile
 #
-FCOMP=GNU           # options: GNU, NVIDIA, INTEL
+FCOMP=NVIDIA        # other options: GNU, NVIDIA, INTEL
 FFLAGS_OPT=1        # for production runs
 FFLAGS_OPT_MAX=0    # for production runs (more aggressive optimization)
 FFLAGS_DEBUG=0      # for debugging
@@ -12,11 +12,16 @@ FFLAGS_DEBUG_MAX=0  # for thorough debugging
 DEBUG=1                    # best = 1 (no significant performance penalty)
 TIMING=1                   # best = 1
 IMPDIFF=0                  #
-IMPDIFF_1D=0               #
-PENCIL_AXIS=1              # = 1/2/3 for X/Y/Z-aligned pencils
+IMPDIFF_1D=1               #
+PENCIL_AXIS=3              # = 1/2/3 for X/Y/Z-aligned pencils
 SINGLE_PRECISION=0         # perform the whole calculation in single precision
+SCALAR=1                   # turn on scalar transport 
+BOUSSINESQ_BUOYANCY=1      # turn on boussinesq
 #
 # GPU-related
 #
-GPU=0
+GPU=1
 USE_NVTX=0                 # use the NVTX-enabled Git branch 'with-nvtx' to see the markers
+
+#Need to point to the NVHPC libraries
+NVHPC_HOME=$(NVHPC)/Linux_x86_64/2024
