adding snellius specific cuDecomp configuration

--- a/dependencies/nvhpcsdk.conf
+++ b/dependencies/nvhpcsdk.conf
@@ -1,18 +1,20 @@
-NVHPC_HOME=/opt/nvidia/hpc_sdk/Linux_x86_64/2022
-
+NVHPC_HOME=/sw/arch/RHEL8/EB_production/2023/software/NVHPC/24.5-CUDA-12.1.1/Linux_x86_64/24.5
 # Required variables to define
 MPICXX=mpicxx
 MPIF90=mpifort
-CUDA_HOME=${NVHPC_HOME}/cuda
-MPI_HOME=${NVHPC_HOME}/comm_libs/hpcx/latest/ompi
-NCCL_HOME=${NVHPC_HOME}/comm_libs/nccl
-CUFFT_HOME=${NVHPC_HOME}/math_libs
-CUTENSOR_HOME=${NVHPC_HOME}/math_libs
+CUDA_HOME=/sw/arch/RHEL8/EB_production/2023/software/CUDA/12.1.1
+#CUDA_HOME=${NVHPC_HOME}/cuda/12.4
+MPI_HOME=/sw/arch/RHEL8/EB_production/2023/software/OpenMPI/4.1.5-NVHPC-24.5-CUDA-12.1.1
+#${NVHPC_HOME}/comm_libs/12.4/hpcx/latest/ompi
+NCCL_HOME=/sw/arch/RHEL8/EB_production/2023/software/NCCL/2.18.3-GCCcore-12.3.0-CUDA-12.1.1
+#${NVHPC_HOME}/comm_libs/12.4/nccl
+CUFFT_HOME=${NVHPC_HOME}/math_libs/12.4
+CUTENSOR_HOME=${NVHPC_HOME}/math_libs/12.4
 CUDACXX_HOME=${CUDA_HOME}
 
 # Optional variables
-CUDA_CC_LIST=60 70 80
+CUDA_CC_LIST=70 80 90
 BUILD_FORTRAN=1
-ENABLE_NVTX=1
-ENABLE_NVSHMEM=1
-NVSHMEM_HOME=${NVHPC_HOME}/comm_libs/nvshmem
+ENABLE_NVTX=0
+ENABLE_NVSHMEM=0
+NVSHMEM_HOME=${NVHPC_HOME}/comm_libs/12.4/nvshmem
