Implemented simulation an arbritrary number of scalars.
This major update enables the simulation of an arbritrary number of
scalars, with flexible temporal discretization of diffusion terms,
developed by @bahardy. The first scalar is treated as a temperature which can
optionally trigger thermal convection within the Boussinesq approximation.
Documentation, tests, and examples have been updated to address this
update. See the `News` section in the `README.md` file.

Co-authored-by: Baptiste Hardy <bhardy@tudelft.nl>
Co-authored-by: bahardy

--- a/examples/differentially_heated_cavity/build.conf
+++ b/examples/differentially_heated_cavity/build.conf
@@ -15,6 +15,7 @@ IMPDIFF=0             #
 IMPDIFF_1D=0          #
 PENCIL_AXIS=1         # = 1/2/3 for X/Y/Z-aligned pencils
 SINGLE_PRECISION=0    # perform the whole calculation in single precision
+BOUSSINESQ_BUOYANCY=1 # buoyancy effects
 #
 # GPU-related
 #
