--- a/tests/differentially_heated_cavity/build.conf
+++ b/tests/differentially_heated_cavity/build.conf
@@ -15,6 +15,7 @@ IMPDIFF=0             #
 IMPDIFF_1D=0          #
 PENCIL_AXIS=1         # = 1/2/3 for X/Y/Z-aligned pencils
 SINGLE_PRECISION=0    # perform the whole calculation in single precision
+BOUSSINESQ_BUOYANCY=1 # buoyancy effects
 #
 # GPU-related
 #
