--- a/configs/defaults/build-default.conf
+++ b/configs/defaults/build-default.conf
@@ -15,6 +15,7 @@ IMPDIFF=0             #
 IMPDIFF_1D=0          #
 PENCIL_AXIS=1         # = 1/2/3 for X/Y/Z-aligned pencils
 SINGLE_PRECISION=0    # perform the whole calculation in single precision
+POISSON_PCR_TDMA=0    # use PCR-TDMA method to solve Poisson/Helmholtz problems
 #
 # GPU-related
 #
