Removed CPP macros in favour of command-line arguments.

--- a/configs/defaults/build-default.conf
+++ b/configs/defaults/build-default.conf
@@ -1,22 +1,13 @@
 #
 # compiler and compiling profile
 #
-FCOMP=GNU             # options: GNU, NVIDIA, INTEL
-FFLAGS_OPT=1          # for production runs
-FFLAGS_OPT_MAX=0      # for production runs (more aggressive optimization)
-FFLAGS_DEBUG=0        # for debugging
-FFLAGS_DEBUG_MAX=0    # for thorough debugging
+FCOMP=GNU          # options: GNU, NVIDIA, INTEL
+FFLAGS_OPT=1       # for production runs
+FFLAGS_OPT_MAX=0   # for production runs (more aggressive optimization)
+FFLAGS_DEBUG=0     # for debugging
+FFLAGS_DEBUG_MAX=0 # for thorough debugging
 #
 # defines
 #
-DEBUG=1               # best = 1 (no significant performance penalty)
-TIMING=1              # best = 1
-IMPDIFF=0             #
-IMPDIFF_1D=0          #
-PENCIL_AXIS=1         # = 1/2/3 for X/Y/Z-aligned pencils
-SINGLE_PRECISION=0    # perform the whole calculation in single precision
-POISSON_PCR_TDMA=0    # use PCR-TDMA method to solve Poisson/Helmholtz problems
-#
-# GPU-related
-#
-GPU=0
+SINGLE_PRECISION=0 # perform the whole calculation in single precision
+GPU=0              # GPU build
