--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "dependencies/2decomp-fft"]
 	path = dependencies/2decomp-fft
 	url = https://github.com/CaNS-World/2decomp-fft
+[submodule "dependencies/diezDecomp/diezDecomp-repo"]
+	path = dependencies/diezDecomp/diezDecomp-repo
+	url = https://github.com/Rafael10Diez/diezDecomp
