--- a/.github/workflows/run-one.yml
+++ b/.github/workflows/run-one.yml
@@ -6,10 +6,15 @@ on:
       compiler:
         required: true
         type: string
+      container_image:
+        required: true
+        type: string
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: ${{ inputs.container_image }}
     timeout-minutes: 20
     strategy:
       matrix:
@@ -25,11 +30,23 @@ jobs:
       SKIP_BUILD: ${{ matrix.mode.name == 'opt-omp' }} # skipped combinations
     name: build-${{ matrix.mode.name }}
     steps:
+    - name: Log in to NVIDIA Container Registry
+      if: ${{ inputs.compiler == 'NVIDIA' }}
+      uses: docker/login-action@v3
+      with:
+        registry: nvcr.io
+        username: "$oauthtoken"
+        password: ${{ secrets.NGC_API_KEY }}
     - name: Checkout code
       if: ${{ env.SKIP_BUILD != 'true' }}
       uses: actions/checkout@v4
       with:
         submodules: true
+    - name: Install dependencies
+      if: ${{ env.SKIP_BUILD != 'true' }}
+      run: |
+        apt-get update
+        apt-get install -y --no-install-recommends make libfftw3-dev
     - name: Set up the environment and get packages
       if: ${{ env.SKIP_BUILD != 'true' }}
       uses: ./.github/actions/build
@@ -43,6 +60,8 @@ jobs:
     timeout-minutes: 30
     runs-on: ubuntu-latest
     needs: build
+    container:
+      image: ${{ inputs.container_image }}
     strategy:
       matrix:
         mode:
@@ -56,6 +75,13 @@ jobs:
     env:
       SKIP_RUN: ${{ (matrix.mode.name == 'opt' && inputs.compiler == 'INTEL') || (matrix.mode.name == 'dbg' && inputs.compiler == 'NVIDIA') }} # skipped combinations
     steps:
+    - name: Log in to NVIDIA Container Registry
+      if: ${{ inputs.compiler == 'NVIDIA' }}
+      uses: docker/login-action@v3
+      with:
+        registry: nvcr.io
+        username: "$oauthtoken"
+        password: ${{ secrets.NGC_API_KEY }}
     - name: Display skipped combinations
       if: ${{ env.SKIP_RUN == 'true' }}
       run: |
@@ -65,6 +91,11 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: false
+    - name: Install dependencies
+      if: ${{ env.SKIP_RUN != 'true' }}
+      run: |
+        apt-get update
+        apt-get install -y --no-install-recommends make libfftw3-dev
     - name: Set up the environment and get packages
       if: ${{ env.SKIP_RUN != 'true' }}
       uses: ./.github/actions/build
@@ -88,7 +119,9 @@ jobs:
       if: ${{ env.SKIP_RUN != 'true' }}
       shell: bash  # specify the shell explicitly
       run: |
-           source .github/actions/build/scripts/setenv-${{ inputs.compiler }}.sh
+           if [ "${{ inputs.compiler }}" = "INTEL" ] || [ "${{ inputs.compiler }}" = "NVIDIA" ]; then
+             source .github/actions/build/scripts/setenv-${{ inputs.compiler }}.sh
+           fi
            chmod +x ./run/cans
            cd tests/${{ matrix.test-name }}
            bash ./testit.sh
